--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,12 @@
 	margin: 0;
 	padding: 0;
 }
-.body{
+
+.body {
 	height: 100vh;
 	overflow: hidden;
 }
+
 a {
 	text-decoration: none;
 }
@@ -37,15 +39,18 @@ img {
 .align-center {
 	align-items: center;
 }
+
 .pages {
 	position: fixed;
 	top: 20%;
 	left: 1%;
 }
+
 .pages ul li {
 	display: block;
 	padding: 33px 0px;
 }
+
 .pages ul li a i {
 	color: aqua;
 }
@@ -74,9 +79,11 @@ button {
 	left: 0;
 	/* transition: 2s; */
 }
+
 .slide {
-	left:-100%;
+	left: -100%;
 }
+
 .heading p {
 	margin: 0;
 }
@@ -210,9 +217,16 @@ button a {
 .about-area {
 	background: #2d2d2d;
 	padding: 45px 0px;
-	height: 100vh;
 }
 
+@media screen and (min-width:600px) {
+	.about-area {
+		background: #2d2d2d;
+		padding: 45px 0px;
+		height: 100vh;
+	}
+
+}
 .about h3 {
 	color: aqua;
 }
@@ -305,36 +319,39 @@ button a {
 .skills {
 	margin-top: 60px;
 }
+
 /* My Skills */
 
 .progress {
-    height: 8px;
-    border-radius: 20px;
+	height: 8px;
+	border-radius: 20px;
 	margin-bottom: 35px;
 	background-color: #000;
 }
 
 .progress .skill .val {
-    float: right;
-    font-style: normal;
-    margin: 0 20px 0 0;
+	float: right;
+	font-style: normal;
+	margin: 0 20px 0 0;
 }
+
 span {
-    display: block;
-    position: relative;
-    font-size: 13px;
-    font-weight: 600;
-    text-transform: uppercase;
-    color: #00c3ff;
-    line-height: 17px;
-    margin-bottom: 5px;
+	display: block;
+	position: relative;
+	font-size: 13px;
+	font-weight: 600;
+	text-transform: uppercase;
+	color: #00c3ff;
+	line-height: 17px;
+	margin-bottom: 5px;
 	text-align: left;
 }
+
 .progress-bar {
-    text-align: left;
+	text-align: left;
 	background-color: #00e7ff;
-    border-radius: 20px;
-    transition-duration: 3s;
+	border-radius: 20px;
+	transition-duration: 3s;
 }
 
 
@@ -398,6 +415,7 @@ p {
 	grid-template-columns: auto auto;
 	grid-gap: 15px;
 }
+
 .sub-ex {
 	display: flex;
 	align-items: center;
@@ -409,6 +427,7 @@ p {
 	border-top: 2px solid #777;
 	border-bottom: 2px solid #777;
 }
+
 .yr {
 	height: 88px;
 	width: 16%;
