--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,50 @@
 	margin: 0;
 	padding: 0;
 }
+#cursor{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 1px solid rgb(0, 225, 255);
+    position:absolute;
+    transition-duration: 500ms;
+    transition-timing-function: ease-out;
+	animation: bipul2 1s infinite;
 
+}
+
+.dot{
+    height: 50%;
+    width: 50%;
+    border-radius: 50%;
+    border: 1px solid rgb(248, 248, 248);
+    position:absolute;
+    transition-duration: 700ms;
+    transition-timing-function: ease-out;
+	animation: bipul 1s infinite;
+}
+@keyframes bipul {
+	0%{
+		height: 0%;
+		width: 0%;
+	}
+
+	100%{
+		height: 150%;
+		width: 150%;
+	}
+}
+@keyframes bipul2 {
+	0%{
+		height: 20px;
+		width: 20px;
+	}
+
+	100%{
+		height: 30px;
+		width: 30px;
+	}
+}
 .body {
 	height: 100vh;
 	overflow: hidden;
